test/errors/circular-dependencies-two/packages/library-core/index.ts
export * from '@library-cirulcar-dependencies-two/core/src/library.module';
export * from '@library-cirulcar-dependencies-two/core/src/form-control-registry/form-control-registry.service';
